add_executable(BBP main.cpp Discord/DiscordPlayerCommunication.cpp Discord/DiscordPlayerCommunication.hpp Discord/BbpDiscordClient.cpp Discord/BbpDiscordClient.hpp Storyteller.cpp Storyteller.hpp Characters/TestCharacter.cpp Characters/TestCharacter.hpp Player.cpp Player.hpp GameState.cpp GameState.hpp Characters/Character.hpp Characters/CharacterType.hpp PlayerCommunication.cpp PlayerCommunication.hpp Characters/Washerwoman.cpp Characters/Washerwoman.hpp Characters/CharacterTraits.hpp Random.hpp Characters/Character.cpp Characters/CharacterKnowerBase.cpp Characters/CharacterKnowerBase.hpp Characters/Librarian.cpp Characters/Librarian.hpp Characters/Investigator.cpp Characters/Investigator.hpp Random.cpp Characters/Chef.cpp Characters/Chef.hpp Characters/Empath.cpp Characters/Empath.hpp ActionInput.hpp PlayerData.hpp ActionInputConsole.cpp ActionInputConsole.hpp Characters/FortuneTeller.cpp Characters/FortuneTeller.hpp)
